// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader: Match snapshots 1 1`] = `
<Themed.Header
  centerComponent={
    <Logo
      color="#FFF"
      isDark={false}
    />
  }
  containerStyle={
    Array [
      Object {
        "borderBottomWidth": 2,
        "height": 70,
        "paddingTop": 20,
      },
      Object {
        "backgroundColor": "#17212D",
        "borderBottomColor": "#009CFF",
      },
    ]
  }
  leftComponent={
    <Themed.Icon
      color="#FFF"
      name="menu"
      onPress={[Function]}
      type="simple-line-icon"
    />
  }
  rightComponent={
    <Themed.Icon
      color="#FFF"
      name="home"
      onPress={[Function]}
      type="antdesign"
    />
  }
/>
`;

exports[`AppHeader: Match snapshots 2 1`] = `
<Themed.Header
  centerComponent={
    <Logo
      color="#17212D"
      isDark={true}
    />
  }
  containerStyle={
    Array [
      Object {
        "borderBottomWidth": 2,
        "height": 70,
        "paddingTop": 20,
      },
      Object {
        "backgroundColor": "#FFF",
        "borderBottomColor": "#E88C0C",
      },
    ]
  }
  leftComponent={
    <Themed.Icon
      color="#17212D"
      name="menu"
      onPress={[Function]}
      type="simple-line-icon"
    />
  }
  rightComponent={
    <Themed.Icon
      color="#17212D"
      name="home"
      onPress={[Function]}
      type="antdesign"
    />
  }
/>
`;
